src/test/deca/context/invalid/field_void.deca
// Description:
//    field is not a void
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

class A {
	void x;
}
